# api/model/models.ts
@@ -1,13 +1,13 @@
 export * from './empty';
-export * from './feedResponse';
-export * from './followersResponse';
-export * from './followingResponse';
 export * from './isFollowingResponse';
 export * from './postStatusRequest';
 export * from './profileResponse';
 export * from './response';
 export * from './signupRequest';
 export * from './statusResponse';
-export * from './storyResponse';
+export * from './statusesResponse';
+export * from './statusesResponseInner';
 export * from './updateProfileRequest';
 export * from './userResponse';
+export * from './usersResponse';
+export * from './usersResponseInner';
