# api/model/statusesResponse.ts
@@ -9,20 +9,8 @@
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
+import { StatusesResponseInner } from './statusesResponseInner';
 
 
-export interface UserResponse { 
-    /**
-     * The user handle
-     */
-    handle?: string;
-    /**
-     * The user full name
-     */
-    name?: string;
-    /**
-     * The user password
-     */
-    password?: string;
-    profile?: string;
+export interface StatusesResponse extends Array<StatusesResponseInner> { 
 }
