# api/model/usersResponse.ts
@@ -9,20 +9,8 @@
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
+import { UsersResponseInner } from './usersResponseInner';
 
 
-export interface UserResponse { 
-    /**
-     * The user handle
-     */
-    handle?: string;
-    /**
-     * The user full name
-     */
-    name?: string;
-    /**
-     * The user password
-     */
-    password?: string;
-    profile?: string;
+export interface UsersResponse extends Array<UsersResponseInner> { 
 }
