# api/model/usersResponseUsers.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-10-29T19:03:02Z
+ * OpenAPI spec version: 2019-10-29T00:35:13Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -11,18 +11,8 @@
  */
 
 
-export interface UserResponse { 
-    /**
-     * The user handle
-     */
+export interface UsersResponseUsers { 
     handle?: string;
-    /**
-     * The user full name
-     */
     name?: string;
-    /**
-     * The user password
-     */
     password?: string;
-    profile?: string;
 }
